kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secureflow
  labels:
    name: secureflow
    security-zone: backend
